--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "vee-validate": "^2.2.15",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.1"
